--- a/back/package.json
+++ b/back/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
-    "fs": "0.0.1-security",
+    "@nestjs/swagger": "^4.6.1",
+    "@types/multer-gridfs-storage": "^4.0.1",
     "mongoose": "^5.10.6",
+    "multer-gridfs-storage": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
