--- a/back/package.json
+++ b/back/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.1",
     "@types/multer-gridfs-storage": "^4.0.1",
+    "mongo-gridfs": "^1.1.0",
     "mongoose": "^5.10.6",
     "multer-gridfs-storage": "^4.2.0",
     "reflect-metadata": "^0.1.13",
