--- a/back/package.json
+++ b/back/package.json
@@ -22,11 +22,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.1.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/multer-gridfs-storage": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "mongo-gridfs": "^1.1.0",
     "mongoose": "^5.10.6",
     "multer-gridfs-storage": "^4.2.0",
