--- a/back/package.json
+++ b/back/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/mongoose": "^7.0.2",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.1",
     "@types/bcrypt": "^3.0.0",
@@ -34,6 +35,8 @@
     "mongo-gridfs": "^1.1.0",
     "mongoose": "^5.10.6",
     "multer-gridfs-storage": "^4.2.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
