--- a/back/package.json
+++ b/back/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.0.0",
     "mongo-gridfs": "^1.1.0",
     "mongoose": "^5.10.6",
+    "mongoose-paginate-v2": "^1.3.17",
     "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -49,6 +50,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/mongoose": "^5.7.36",
+    "@types/mongoose-paginate-v2": "^1.3.9",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
