--- a/front/package.json
+++ b/front/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://juankmilo65.github.io/etyalab​",
   "name": "front",
   "version": "0.1.0",
   "private": true,
@@ -8,17 +9,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-pdf": "^5.0.0",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-pdf": "^5.0.2",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
