--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.2.0",
     "react-pdf": "^5.0.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
