--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.20.0",
+    "classnames": "^2.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^4.2.0",
